--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,3 +1,3 @@
 compile.on.save=true
 file.reference.mysql-connector-j-8.0.33.jar=E:\\Ing.Software Semestre III(3)\\Programaci\u00f3n\\JAVA\\mysql-connector-java-5.1.48.jar
-user.properties.file=C:\\Users\\Ruth Riveiro\\AppData\\Roaming\\NetBeans\\17\\build.properties
+user.properties.file=C:\\Users\\SENATI\\AppData\\Roaming\\NetBeans\\17\\build.properties
