--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -34,10 +34,10 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/SisAlmacen
 excludes=
 file.reference.jcalendar-1.4.jar=E:\\Ing.Software Semestre III(3)\\Programaci\u00f3n\\JAVA\\jcalendar-1.4.jar\\jcalendar-1.4.jar
-file.reference.jcalendar-1.4.jar-1=C:\\Users\\SENATI\\Documents\\NetBeans - Projects\\jcalendar-1.4.jar\\jcalendar-1.4.jar
+file.reference.jcalendar-1.4.jar-1=..\\..\\jcalendar-1.4.jar\\jcalendar-1.4.jar
 file.reference.jcalendar-1.4.jar-2=..\\..\\Entregable 1 - Metodolog\u00eda\\jcalendar-1.4.jar\\jcalendar-1.4.jar
 file.reference.mysql-connector-j-8.0.33.jar=E:\\Ing.Software Semestre III(3)\\Programaci\u00f3n\\JAVA\\mysql-connector-j-8.0.33.jar
-file.reference.mysql-connector-java-5.1.48.jar=C:\\Users\\SENATI\\Documents\\NetBeans - Projects\\mysql-connector-java-5.1.48.jar
+file.reference.mysql-connector-java-5.1.48.jar=..\\..\\mysql-connector-java-5.1.48.jar
 file.reference.mysql-connector-java-5.1.48.jar-1=..\\..\\Entregable 1 - Metodolog\u00eda\\mysql-connector-java-5.1.48.jar
 includes=**
 jar.compress=false
@@ -48,7 +48,9 @@ javac.classpath=\
     ${file.reference.mysql-connector-java-5.1.48.jar}:\
     ${file.reference.jcalendar-1.4.jar-1}:\
     ${file.reference.jcalendar-1.4.jar-2}:\
-    ${file.reference.mysql-connector-java-5.1.48.jar-1}
+    ${file.reference.mysql-connector-java-5.1.48.jar-1}:\
+    ${file.reference.jcalendar-1.4.jar-1}:\
+    ${file.reference.mysql-connector-java-5.1.48.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
