--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=SisAlmacen
+application.vendor=Ruth Riveiro
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -32,6 +33,7 @@ dist.jar=${dist.dir}/SisAlmacen.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/SisAlmacen
+endorsed.classpath=
 excludes=
 file.reference.jcalendar-1.4.jar=E:\\Ing.Software Semestre III(3)\\Programaci\u00f3n\\JAVA\\jcalendar-1.4.jar\\jcalendar-1.4.jar
 file.reference.jcalendar-1.4.jar-1=..\\..\\jcalendar-1.4.jar\\jcalendar-1.4.jar
@@ -86,7 +88,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=SisAlmacen
-main.class=Presentacion.Principal
+main.class=Presentacion.FrmLogin
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
