--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -38,9 +38,11 @@ excludes=
 file.reference.jcalendar-1.4.jar=E:\\Ing.Software Semestre III(3)\\Programaci\u00f3n\\JAVA\\jcalendar-1.4.jar\\jcalendar-1.4.jar
 file.reference.jcalendar-1.4.jar-1=..\\..\\jcalendar-1.4.jar\\jcalendar-1.4.jar
 file.reference.jcalendar-1.4.jar-2=..\\..\\Entregable 1 - Metodolog\u00eda\\jcalendar-1.4.jar\\jcalendar-1.4.jar
+file.reference.jcalendar-1.4.jar-3=..\\Entregable 1 - Metodolog\u00eda\\jcalendar-1.4.jar\\jcalendar-1.4.jar
 file.reference.mysql-connector-j-8.0.33.jar=E:\\Ing.Software Semestre III(3)\\Programaci\u00f3n\\JAVA\\mysql-connector-j-8.0.33.jar
 file.reference.mysql-connector-java-5.1.48.jar=..\\..\\mysql-connector-java-5.1.48.jar
 file.reference.mysql-connector-java-5.1.48.jar-1=..\\..\\Entregable 1 - Metodolog\u00eda\\mysql-connector-java-5.1.48.jar
+file.reference.mysql-connector-java-5.1.48.jar-2=..\\Entregable 1 - Metodolog\u00eda\\mysql-connector-java-5.1.48.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -52,7 +54,9 @@ javac.classpath=\
     ${file.reference.jcalendar-1.4.jar-2}:\
     ${file.reference.mysql-connector-java-5.1.48.jar-1}:\
     ${file.reference.jcalendar-1.4.jar-1}:\
-    ${file.reference.mysql-connector-java-5.1.48.jar}
+    ${file.reference.mysql-connector-java-5.1.48.jar}:\
+    ${file.reference.jcalendar-1.4.jar-3}:\
+    ${file.reference.mysql-connector-java-5.1.48.jar-2}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
